--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <repositories>
+        <repository>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+        </repository>
+        <repository>
+            <id>central</id>
+            <url>http://repo1.maven.org/maven2/</url>
+        </repository>
+    </repositories>
+
     <groupId>org.pigstable</groupId>
     <artifactId>nifty-pigunit</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <pig.version>0.11.0-cdh4.5.0</pig.version>
+        <pig.version>0.12.0-cdh5.1.3</pig.version>
         <junit.version>4.11</junit.version>
     </properties>
 
